# brep_application

./: BRepApplication.py  BRepApplication3.py  CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  Doxyfile  LICENSE.txt  brep_application.cpp  brep_application.h  brep_application_variables.cpp  brep_application_variables.h
custom_algebra/: and_brep.h  and_brep_2.h  brep.cpp  brep.h  natm_arc_brep.h  not_brep.h  not_brep_2.h  occ_brep.h  or_brep.h  or_brep_2.h  r_min_max_tube_brep.h
custom_algebra/curve/: curve.cpp  curve.h  linear_curve.h  parametric_curve.h
custom_algebra/function/: cubic_spline_function.h  function.h  heaviside_function.h  hydrostatic_pressure_function_on_surface.h  inverse_function.h  load_function.h  load_function_plate_with_the_hole.h  mathpresso_function.h  monomial_function.h  negate_function.h  pow_function.h  product_function.h  scalar_function.h  scale_function.h  sum_function.h  trigonometric_function.h  zero_function.h
custom_algebra/level_set/: circular2_level_set.h  circular_level_set.h  closest_level_set.h  cone_level_set.h  cylinder2_level_set.h  cylinder_level_set.h  difference_level_set.h  distance_to_curve_level_set.h  doughnut_level_set.h  interpolatory_nodal_level_set.h  intersection_level_set.h  inverse_level_set.h  level_set.h  linear_level_set.h  nodal_level_set.h  planar_level_set.h  product_level_set.h  r_min_max_tube_level_set.h  spherical2_level_set.h  spherical_level_set.h  union_level_set.h
custom_algebra/section/: polygonal_section.h  section.h
custom_algebra/surface/: parametric_surface.h
custom_algebra/trans/: mirror.h  rotation.h  transformation.h  transformation_utility.h  translation.h
custom_algebra/volume/: parametric_volume.h
custom_cmake_modules/: FindCityGML.cmake  FindOpenCasCade.cmake
custom_external_libraries/: spline.h
custom_python/: add_brep_and_level_set_to_python.cpp  add_brep_and_level_set_to_python.h  add_custom_algebra_1_to_python.cpp  add_custom_algebra_2_to_python.cpp  add_custom_algebra_to_python.cpp  add_custom_algebra_to_python.h  add_occ_to_python.cpp  add_occ_to_python.h  add_transformation_to_python.cpp  add_transformation_to_python.h  add_utilities_to_python.cpp  add_utilities_to_python.h  brep_python_application.cpp
custom_python3/: add_brep_and_level_set_to_python.cpp  add_brep_and_level_set_to_python.h  add_custom_algebra_to_python.cpp  add_custom_algebra_to_python.h  add_occ_to_python.cpp  add_occ_to_python.h  add_transformation_to_python.cpp  add_transformation_to_python.h  add_utilities_to_python.cpp  add_utilities_to_python.h  brep_python_application.cpp
custom_utilities/: MakeBottle.cxx  MakeSphere.cxx  ReadSTEP.cxx  WriteSTEP.cxx  brep_intersection_utility.h  brep_math_utility.h  brep_mesh_utility.cpp  brep_mesh_utility.h  brep_utility.h  delaunay.h  grid_binning.h  occ_define.h  occ_utility.h  structured_grid_binning.h  tube_mesher.h
python_scripts/: trans_utility.py
test_examples/: test1.py
test_examples/brep_mesh_utility/: test_create_hex8_layers_around_curve.py
test_examples/curve/: test_parametric_curve.py
test_examples/intersection/: log_20Mar21  test_intersection_1.py
test_examples/nodal_level_set/cube1.gid/: cube1.py
test_examples/occ/: bottle.stp  sphere.stp  test_create_topods_shape.py  test_make_bottle.py  test_make_sphere.py
test_examples/planar_level_set/: log_test_cut_lines.txt  test_cut_lines.py
test_examples/planar_level_set/test_cut_element/cube1.gid/: cube1.py  cube1_include.py  log_18Mar21
test_examples/tube_mesher/: test_create_hex20_layers_around_curve.py  test_create_hex27_layers_around_curve.py  test_create_hex8_layers_around_curve.py
